package lithium.service.casino.provider.roxor.data.response.freegames;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.ToString;

@Data
@Builder
@NoArgsConstructor
@AllArgsConstructor
@ToString
public class Prize {

    private String amount;

    private String prizeType;

}
